--- a/src/app/components/Seccion2.0/proyecto.module.css
+++ b/src/app/components/Seccion2.0/proyecto.module.css
@@ -7,6 +7,10 @@
   color: #ffffff;
 }
 
+:global(body.dark) .titulosecundario {
+  color: #ffffff;
+}
+
 :global(body.dark) .card {
   background-color: #1e1e1e;
   border-color: #333;
@@ -18,7 +22,7 @@
 }
 
 :global(body.dark) .card a {
-  color: #00ffff;
+  color: #000000;
 }
 .proyectosContainer {
   padding: 2rem;
