--- a/src/app/components/Seccion3.0/contacto.module.css
+++ b/src/app/components/Seccion3.0/contacto.module.css
@@ -1,3 +1,31 @@
+:global(body.dark) .contactoContainer {
+  background-color: #000000;
+  color: #f5f5f5;
+}
+
+:global(body.dark) .titulo {
+  color: #ffffff;
+}
+
+:global(body.dark) .labeltext {
+  color: #ffffff;
+}
+
+:global(body.dark) .formulario {
+  background-color: #1e1e1e;
+  border-color: #333;
+  color: #ffffff;
+}
+
+:global(body.dark) .formulario:hover {
+  background-color: #00ffeacc;
+  color: #000000;
+}
+
+:global(body.dark) .formulario a {
+  color: #000000;
+}
+
 .contactoContainer {
   padding: 2rem;
   background-color: #ffffff;
