--- a/src/app/components/Seccion4.0/habilidades.module.css
+++ b/src/app/components/Seccion4.0/habilidades.module.css
@@ -1,7 +1,7 @@
 .habilidadesContainer {
   padding: 2rem;
   background-color: #ffffff;
-  color: #333;
+  color: #000000;
   text-align: center;
 }
 
@@ -49,7 +49,7 @@
 
 /* === DARK MODE === */
 :global(body.dark) .habilidadesContainer {
-  background-color: #121212;
+  background-color: #000000;
   color: #f5f5f5;
 }
 
@@ -58,9 +58,13 @@
   color: #fff;
   border: 1px solid #333;
 }
+:global(body.dark) .categoria:hover {
+  background-color: #00ffeacc;
+  color: #000000;
+}
 
 :global(body.dark) .categoria h3 {
-  color: #00ffff;
+  color: #ffffff;
 }
 
 /* === RESPONSIVE === */
