fix: corregir error de estilo en CSS Modules al aplicar clases globales

--- a/src/app/components/Seccion2.0/proyecto.module.css
+++ b/src/app/components/Seccion2.0/proyecto.module.css
@@ -18,7 +18,8 @@
 }
 
 :global(body.dark) .card:hover {
-  background-color: #00ffeacc;
+  color: #000000;
+  background-color: #00ffea;
 }
 
 :global(body.dark) .card a {
