--- a/src/app/components/Header/Header.module.css
+++ b/src/app/components/Header/Header.module.css
@@ -11,16 +11,19 @@
   z-index: 100;
 }
 .navbarLight {
-  background: rgb(255, 255, 255);
+  background: rgba(255, 255, 255, 0.866);
+  backdrop-filter: blur(9px);
   color: rgb(0, 0, 0);
+}
+.navbarLight:hover {
+  background: rgba(255, 255, 255, 0.9);
 }
 
 .navbarDark {
-  background: rgb(0, 0, 0);
+  background: rgb(0, 0, 0, 0.3);
+  backdrop-filter: blur(9px);
   color: rgb(255, 255, 255);
 }
-
-
 
 .leftSide {
   display: flex;
@@ -52,9 +55,17 @@
   border-radius: 6px;
   transition: background 0.3s, color 0.3s;
 }
-
-.navLink:hover {
-  background: rgba(255, 255, 255, 0.15);
+.botonnav {
+  color: inherit;
+  text-decoration: none;
+  font-weight: 500;
+  padding: 8px 12px;
+  border-radius: 6px;
+  transition: background 0.3s, color 0.3s;
+}
+.botonnav:hover {
+  transform: translateY(-5px);
+  color: #0070f3;
 }
 
 .toggleButton {
@@ -94,6 +105,7 @@
     display: none;
     flex-direction: column;
     align-items: flex-start;
+    background: #dddddd;
     position: absolute;
     top: 60px;
     left: 0;
