--- a/src/app/components/Seccion1.0/Seccion1.module.css
+++ b/src/app/components/Seccion1.0/Seccion1.module.css
@@ -3,10 +3,10 @@
   align-items: center;
   justify-content: center;
   padding: 4rem 2rem;
-    gap: 3rem;
-    flex-direction: row;
-    flex-wrap: wrap;
-    background: rgb(255, 255, 255);
+  gap: 3rem;
+  flex-direction: row;
+  flex-wrap: wrap;
+  background: rgb(255, 255, 255);
 }
 :global(body.dark) .Seccion1 {
   background-color: #000000;
@@ -57,7 +57,7 @@
 .ContainerIcons {
   display: flex;
   flex-direction: row;
-    gap: 1.5rem;
+  gap: 1.5rem;
   flex-wrap: wrap;
   justify-content: center;
   margin-top: 2rem;
@@ -65,15 +65,18 @@
 
 .navLink {
   text-decoration: none;
-  background-color: #111;
-  color: #fff;
+  background-color: #ffffff;
+  box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+  color: black;
   padding: 0.75rem 1.5rem;
-  border-radius: 1rem;
+  border-radius: 8px;
   transition: background-color 0.3s;
 }
-  
+
 .navLink:hover {
-  background-color: #333;
+  transform: translateY(-5px);
+  color: #fff;
+  background-color: #000000;
 }
   
 .HomeImg {
@@ -83,16 +86,13 @@
   justify-content: flex-end; /*Esto lo pega la derecha*/
   gap: 0.5rem;
 }
-.navLink:hover {
-  background-color: #292944;
-  transform: scale(1.05);
-}
+
 .ImgeFont {
   width: 20rem;
   height: 20rem;
   object-fit: contain;
-  border-radius: 1.5rem;
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+  border-radius: 8px;
+  box-shadow: 0 2px 8px rgba(0,0,0,0.1);
 }
 /* Estilos para móviles */
 @media screen and (max-width: 768px) {
