--- a/src/app/components/Seccion4.0/habilidades.module.css
+++ b/src/app/components/Seccion4.0/habilidades.module.css
@@ -20,7 +20,7 @@
 .categoria {
   background-color: white;
   padding: 1.5rem;
-  border-radius: 10px;
+  border-radius: 8px;
   box-shadow: 0 2px 8px rgba(0,0,0,0.1);
   width: 250px;
   transition: transform 0.3s ease;
@@ -59,7 +59,7 @@
   border: 1px solid #333;
 }
 :global(body.dark) .categoria:hover {
-  background-color: #00ffeacc;
+  background-color: #00ffea;
   color: #000000;
 }
 
