Mejorado el lado del Navegador ya que no se veia en Movil

--- a/src/app/components/Header/Header.module.css
+++ b/src/app/components/Header/Header.module.css
@@ -97,12 +97,11 @@
   color: #0070f3;
 }
 :global(body.dark) .dropdownContent a {
-  color: #cacaca;
+  color: #ffffff;
 }
 :global(body.dark) .dropdownContent a:hover {
   color: #0070f3;
 }
-
 
 /** Toggle Button **/
 
